--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: $ARCHS
+          platforms: ${{ env.ARCHS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          platforms: $ARCHS
+          platforms: ${{ env.ARCHS }}
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -31,6 +31,5 @@ jobs:
       - name: Build and push Strongswan
         uses: docker/build-push-action@v4
         with:
-          context: repo
           push: true
           tags: taknok/strongswan:latest
