--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-        with:
-          platforms: ${{ env.ARCHS }}
+        # with:
+        #   platforms: ${{ env.ARCHS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          platforms: ${{ env.ARCHS }}
+        # with:
+        #   platforms: ${{ env.ARCHS }}
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
