--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,39 @@
-name: DockerHub
+name: Build and push main
 
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
   workflow_dispatch:
 
 env:
-  ARCHS: "linux/amd64,linux/arm64,linux/arm64/v8,linux/arm/v7,linux/arm/v6"
+  ARCHS: "linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6"
 
 jobs:
-  docker:
+  buildx:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Current repo
         uses: actions/checkout@v3
+
       - name: Set up QEMU
+        id: qemu
         uses: docker/setup-qemu-action@v2
-        # with:
-        #   platforms: ${{ env.ARCHS }}
+        with:
+          platforms: ${{ env.ARCHS }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        # with:
-        #   platforms: ${{ env.ARCHS }}
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push Strongswan
+
+      - name: Build and push docker strongswan
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: taknok/strongswan:latest
+          platforms: ${{ steps.qemu.outputs.platforms }}
