--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          platforms: ${{ env.ARCHS }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -36,4 +38,4 @@ jobs:
         with:
           push: true
           tags: taknok/strongswan:latest
-          platforms: ${{ steps.qemu.outputs.platforms }}
+          platforms: ${{ env.ARCHS }}
