--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  ARCHS: "linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6"
+  ARCHS: "linux/amd64,linux/arm64,linux/arm/v7"
 
 jobs:
   buildx:
