--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -36,4 +36,5 @@ jobs:
         with:
           push: false
           tags: taknok/strongswan:latest
+          provenance: false # https://github.com/docker/buildx/issues/1509
           platforms: ${{ env.ARCHS }}
