--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  ARCHS: "linux/amd64,linux/arm64"
+  ARCHS: "linux/amd64,linux/arm64,linux/arm/v7"
 
 jobs:
   buildx:
@@ -25,6 +25,13 @@ jobs:
         with:
           platforms: ${{ env.ARCHS }}
 
+     - name: Run Docker on tmpfs
+       uses: JonasAlfredsson/docker-on-tmpfs@add4fac6aec8786a4444371acd2962d920273d56
+       with:
+         tmpfs_size: 5
+         swap_size: 4
+         swap_location: '/mnt/swapfile'
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -34,7 +41,7 @@ jobs:
       - name: Build and push docker strongswan
         uses: docker/build-push-action@v4
         with:
-          push: false
-          tags: taknok/strongswan:latest
+          push: true
+          tags: taknok/strongswan:dev
           provenance: false # https://github.com/docker/buildx/issues/1509
           platforms: ${{ env.ARCHS }}
