--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -24,11 +24,14 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           platforms: ${{ env.ARCHS }}
+          config-inline: |
+            [worker.oci]
+              max-parallelism = 1
 
       - name: Run Docker on tmpfs
         uses: JonasAlfredsson/docker-on-tmpfs@add4fac6aec8786a4444371acd2962d920273d56
         with:
-          tmpfs_size: 5
+          tmpfs_size: 6
           swap_size: 4
           swap_location: '/mnt/swapfile'
 
